<resources>
    <string name="app_name">Todo</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>
    <string name="firstname">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="add_todo">Add your task</string>
    <string name="importance">Importance</string>
    <string name="completed">Complete Status</string>
    <string name="default_time">00:00</string>
    <string name="todo_notification_channel_id" translatable="false">todo_channel</string>
    <string name="todo_channel_name">todo</string>
    <string name="hour_seconds">%1$s : %2$s</string>
    <string name="invalid_fields">Invalid Fields</string>
    <string name="login_success">Successfully logged in</string>
    <string name="no_result">No Results</string>
    <string name="all">All</string>
    <string name="work">Work</string>
    <string name="music">Music</string>
    <string name="travel">Travel</string>
    <string name="study">Study</string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <string name="retry">Retry</string>
    <string name="new_todo">New Todo</string>
    <string name="add">Add</string>
    <string name="add_edit_todo">Add Edit Todo</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="statistics">Statistics</string>
    <string name="nothing_here">Nothing Here</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="something_went_wrong_please_try_again">Something went wrong please try again</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="use_device_settings">Use device settings</string>
    <string name="short_shortcut">New Todo</string>
    <string name="long_shortcut">Add New Todo</string>
    <string name="disable_shortcut">New Todo Shortcut Disabled</string>
    <string-array name="importance_array">
        <item>Important</item>
        <item>Not Important</item>
    </string-array>

    <string-array name="completed_array">
        <item>Completed</item>
        <item>Not Completed</item>
    </string-array>

    <string-array name="category_array">
        <item>Work</item>
        <item>Music</item>
        <item>Travel</item>
        <item>Study</item>
        <item>Home</item>
        <item>Shopping</item>
    </string-array>
</resources>